--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,13 @@ repositories {
 
 
 dependencies {
-	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-	implementation('org.springframework.boot:spring-boot-starter-web')
-	runtimeOnly('com.h2database:h2')
+	//implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+	//implementation('org.springframework.boot:spring-boot-starter-web')
+	//runtimeOnly('com.h2database:h2')
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('org.springframework.boot:spring-boot-starter-web')
+	//compile('org.springframework.boot:spring-boot-starter-security')
+	compile('com.h2database:h2')
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
