--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	//implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	//implementation('org.springframework.boot:spring-boot-starter-web')
 	//runtimeOnly('com.h2database:h2')
+	compile group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.1'
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	//compile('org.springframework.boot:spring-boot-starter-security')
