--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	compile group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.1'
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile group: 'org.javassist', name: 'javassist', version: '3.25.0-GA'
 	//compile('org.springframework.boot:spring-boot-starter-security')
 	compile('com.h2database:h2')
 
