--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -14,3 +14,9 @@
 #server.ssl.key-alias=tomcat
 #Dev DB config
 spring.h2.console.enabled=true
+
+
+#Spring security defaults for Basic Auth
+security.user.name = user 
+security.user.password = user
+security.user.role = ADMIN
